--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,23 @@
     <artifactId>cucumber-java</artifactId>
     <version>4.8.0</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
+<dependency>
+    <groupId>net.masterthought</groupId>
+    <artifactId>cucumber-reporting</artifactId>
+    <version>4.11.2</version>
+</dependency>
+
+
+
+<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.6</version>
+</dependency>
+
   
   <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
 <dependency>
